upgrade to threejs 113

--- a/index.html
+++ b/index.html
@@ -99,9 +99,6 @@
         VANTA.FOG({
             el: '#FOG',
         })
-        // VANTA.FOG({
-        //     el: '#FOG',
-        // })
         VANTA.TOPOLOGY({
             el: '#TOPOLOGY',
         })
@@ -109,12 +106,12 @@
             el: '#WAVES',
         })
 
-        // VANTA.GLOBE({
-        //     el: '#GLOBE',
-        // });
-        // VANTA.NET({
-        //     el: '#NET',
-        // })
+        VANTA.GLOBE({
+            el: '#GLOBE',
+        });
+        VANTA.NET({
+            el: '#NET',
+        })
 
         VANTA.TRUNK({
             el: '#TRUNK',
